--- a/Diseño.css
+++ b/Diseño.css
@@ -278,3 +278,10 @@ text-size-adjust: auto;
     float: left;
     margin-left: 180px;
 }
+#vid1{
+    width: 500px;
+    height: 400px;
+    margin-top: -30px;
+    float: left;
+    margin-left: 180px;
+}
