--- a/Diseño.css
+++ b/Diseño.css
@@ -283,5 +283,5 @@ text-size-adjust: auto;
     height: 400px;
     margin-top: -30px;
     float: left;
-    margin-left: 200px;
+    margin-left: 80;
 }
