--- a/Diseño.css
+++ b/Diseño.css
@@ -282,6 +282,6 @@ text-size-adjust: auto;
     width: 500px;
     height: 400px;
     margin-top: -30px;
-    float: left;
+    float: right;
     margin-left: 80;
 }
