--- a/Diseño.css
+++ b/Diseño.css
@@ -282,6 +282,5 @@ text-size-adjust: auto;
     width: 500px;
     height: 400px;
     margin-top: -30px;
-    float: left;
-    margin-left: 200;
+    float: center;
 }
