--- a/Diseño.css
+++ b/Diseño.css
@@ -283,5 +283,6 @@ text-size-adjust: auto;
     height: 400px;
     margin-top: -8px;
     float: left;;
-    margin-left: 500;
+    margin-left: 350;
+    margin-right: -150;
 }
